--- a/sample/package.json
+++ b/sample/package.json
@@ -7,14 +7,14 @@
 		"test": "jest"
 	},
 	"dependencies": {
-		"react": "~15.4.0-rc.4",
-		"react-native": "0.40.0"
+		"react": "~16.0.0",
+		"react-native": "0.50.0"
 	},
 	"devDependencies": {
 		"babel-jest": "18.0.0",
 		"babel-preset-react-native": "1.9.1",
 		"jest": "18.1.0",
-		"react-test-renderer": "~15.4.0-rc.4"
+		"react-test-renderer": "~16.0.0"
 	},
 	"jest": {
 		"preset": "react-native"
