Update React SDK for Identity

--- a/sample/package.json
+++ b/sample/package.json
@@ -1,22 +1,23 @@
 {
-	"name": "MParticleSample",
-	"version": "0.0.1",
-	"private": true,
-	"scripts": {
-		"start": "node node_modules/react-native/local-cli/cli.js start",
-		"test": "jest"
-	},
-	"dependencies": {
-		"react": "~16.0.0",
-		"react-native": "0.50.0"
-	},
-	"devDependencies": {
-		"babel-jest": "18.0.0",
-		"babel-preset-react-native": "1.9.1",
-		"jest": "18.1.0",
-		"react-test-renderer": "~16.0.0"
-	},
-	"jest": {
-		"preset": "react-native"
-	}
+  "name": "MParticleSample",
+  "version": "0.0.1",
+  "private": true,
+  "scripts": {
+    "start": "node node_modules/react-native/local-cli/cli.js start",
+    "test": "jest"
+  },
+  "dependencies": {
+    "react": "*",
+    "react-native": "^0.53.3",
+    "react-native-mparticle": "^1.0.7"
+  },
+  "devDependencies": {
+    "babel-jest": "18.0.0",
+    "babel-preset-react-native": "1.9.1",
+    "jest": "18.1.0",
+    "react-test-renderer": "^16.0.0-alpha.12"
+  },
+  "jest": {
+    "preset": "react-native"
+  }
 }
