--- a/sample/android/app/build.gradle
+++ b/sample/android/app/build.gradle
@@ -83,8 +83,8 @@ def enableSeparateBuildPerCPUArchitecture = false
 def enableProguardInReleaseBuilds = false
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.1"
+    compileSdkVersion 26
+    buildToolsVersion "26.0.1"
 
     defaultConfig {
         applicationId "com.mparticlesample"
@@ -128,7 +128,7 @@ android {
 dependencies {
     compile project(':react-native-mparticle')
     compile fileTree(dir: "libs", include: ["*.jar"])
-    compile "com.android.support:appcompat-v7:23.0.1"
+    compile "com.android.support:appcompat-v7:26+"
     compile "com.facebook.react:react-native:+"  // From node_modules
 
     //
@@ -138,7 +138,7 @@ dependencies {
     //
     // (See https://github.com/mparticle/mparticle-android-sdk for the latest version)
     //
-    compile "com.mparticle:android-core:4.+"
+    compile "com.mparticle:android-core:5.+"
 
     //
     // And, if you want to include kits, you can do so as follows:
