--- a/android/build.gradle
+++ b/android/build.gradle
@@ -36,7 +36,7 @@ repositories {
 }
 
 dependencies {
-    provided 'com.facebook.react:react-native:+'
+    compileOnly 'com.facebook.react:react-native:+'
 
     //
     // In your app, you should include mParticle core like this:
@@ -45,7 +45,7 @@ dependencies {
     //
     // (See https://github.com/mparticle/mparticle-android-sdk for the latest version)
     //
-    provided 'com.mparticle:android-core:5+'
+    compileOnly 'com.mparticle:android-core:5+'
 
     //
     // And, if you want to include kits, you can do so as follows:
