--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,12 +1,12 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.1"
+    compileSdkVersion 28
+    buildToolsVersion "28.0.3"
 
     defaultConfig {
         minSdkVersion 16
-        targetSdkVersion 23
+        targetSdkVersion 28
         versionCode 1
         versionName "1.0"
     }
@@ -25,14 +25,16 @@ android {
 buildscript {
     repositories {
         jcenter()
+        google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.2.3'
+        classpath 'com.android.tools.build:gradle:3.2.1'
     }
 }
 
 repositories {
     jcenter()
+    google()
 }
 
 dependencies {
@@ -52,4 +54,12 @@ dependencies {
     //
     //   compile 'com.mparticle:android-example-kit:REPLACEME'
     //
+
+    testImplementation 'org.mockito:mockito-android:2.18.3'
+    testImplementation 'com.android.support:support-annotations:27.1.1'
+    testImplementation 'junit:junit:4.12'
+
+    testImplementation 'com.mparticle:android-core:5+'
+    testImplementation 'com.facebook.react:react-native:+'
+
 }
