--- a/sample/ios/Podfile
+++ b/sample/ios/Podfile
@@ -13,7 +13,7 @@ target 'MParticleSample' do
   #
   # (See https://github.com/mparticle/mparticle/apple-sdk for the latest version)
   #
-  pod 'mParticle-Apple-SDK', '~> 7'
+  pod 'mParticle-Apple-SDK', :path => '../../../../mparticle-apple-sdk'
 
   #
   # And, if you want to include kits, you can do so as follows:
