feat: update sample apps, add ci builds for Android, iOS

--- a/sample/.babelrc
+++ b/sample/.babelrc
@@ -1,3 +1,11 @@
 {
-"presets": ["react-native"]
+  "plugins": [
+    ["module-resolver", {
+      "root": ["../js"],
+      "alias": {
+        "test": "./test",
+        "underscore": "lodash"
+      }
+    }]
+  ]
 }
