--- a/sample/ios/Podfile
+++ b/sample/ios/Podfile
@@ -1,29 +1,41 @@
-# Uncomment the next line to define a global platform for your project
-# platform :ios, '9.0'
+require_relative '../node_modules/react-native/scripts/react_native_pods'
+require_relative '../node_modules/@react-native-community/cli-platform-ios/native_modules'
 
-target 'MParticleSample' do
-  # Uncomment the next line if you're using Swift or would like to use dynamic frameworks
-  # use_frameworks!
+platform :ios, '11.0'
 
-  # Pods for MParticleSample
+target 'sampleApp' do
+  config = use_native_modules!
 
-  # In your app, you should include mParticle core like this:
-  #
-  # pod 'mParticle-Apple-SDK', 'REPLACEME'
-  #
-  # (See https://github.com/mparticle/mparticle/apple-sdk for the latest version)
-  #
+  use_react_native!(
+    :path => config[:reactNativePath],
+    # to enable hermes on iOS, change `false` to `true` and then install pods
+    :hermes_enabled => false
+  )
   pod 'mParticle-Apple-SDK', '~> 8'
 
-  #
-  # And, if you want to include kits, you can do so as follows:
-  #
-  #   pod 'mParticle-Example', 'REPLACEME'
-  #
-
-  target 'MParticleSampleTests' do
-    inherit! :search_paths
+  target 'sampleAppTests' do
+    inherit! :complete
     # Pods for testing
   end
 
+  # Enables Flipper.
+  #
+  # Note that if you have use_frameworks! enabled, Flipper will not work and
+  # you should disable the next line.
+  # use_flipper!()
+
+  post_install do |installer|
+    react_native_post_install(installer)
+    # flipper_post_install(installer)
+    installer.pods_project.targets.each do|target|
+      target.build_configurations.each do |config|
+        config.build_settings['ENABLE_BITCODE'] = 'NO'
+        if target.name == 'RCT-Folly'
+          config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '9.0'
+        else
+          config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '10.0'
+        end
+      end
+    end
+  end
 end
