--- a/sample/package.json
+++ b/sample/package.json
@@ -1,23 +1,32 @@
 {
-  "name": "MParticleSample",
+  "name": "mparticle-react-native-sample",
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node node_modules/react-native/local-cli/cli.js start",
-    "test": "jest"
+    "android": "react-native run-android",
+    "ios": "react-native run-ios",
+    "start": "react-native start",
+    "test": "jest",
+    "lint": "eslint ."
   },
   "dependencies": {
-    "react": "*",
-    "react-native": "^0.53.3",
-    "react-native-mparticle": "2.5.0"
+    "react": "17.0.2",
+    "react-native": "0.68.0"
   },
   "devDependencies": {
-    "babel-jest": "18.0.0",
-    "babel-preset-react-native": "1.9.1",
-    "jest": "18.1.0",
-    "react-test-renderer": "^16.0.0-alpha.12"
+    "@babel/core": "^7.15.5",
+    "@babel/runtime": "^7.15.4",
+    "@react-native-community/eslint-config": "^3.0.1",
+    "babel-jest": "^27.2.0",
+    "babel-plugin-module-resolver": "^4.1.0",
+    "eslint": "^7.32.0",
+    "jest": "^27.2.0",
+    "metro-react-native-babel-preset": "^0.53.1",
+    "react-native-codegen": "^0.0.7",
+    "react-test-renderer": "17.0.2"
   },
   "jest": {
     "preset": "react-native"
   }
 }
+
