--- a/android/build.gradle
+++ b/android/build.gradle
@@ -47,7 +47,7 @@ dependencies {
     //
     // (See https://github.com/mparticle/mparticle-android-sdk for the latest version)
     //
-    compileOnly 'com.mparticle:android-core:[5.9.3, )'
+    compileOnly 'com.mparticle:android-core:[5.9.3, 5.38.2]'
 
     //
     // And, if you want to include kits, you can do so as follows:
