--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,7 +9,7 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             - name: Git checkout
-              uses: actions/checkout@v1
+              uses: actions/checkout@v3
             - name: Branch name
               run: |
                   BRANCHNAME=${GITHUB_REF##*/}
@@ -27,13 +27,13 @@ jobs:
 
     react-tests:
         name: Run React Native Unit Tests
-        runs-on: ubuntu-18.04
+        runs-on: ubuntu-latest
         needs: ['confirm-master-branch']
         steps:
             - name: Checkout
-              uses: actions/checkout@v2
+              uses: actions/checkout@v3
             - uses: actions/setup-node@master
-            - uses: c-hive/gha-yarn-cache@v1
+            - uses: c-hive/gha-yarn-cache@v2
 
             - name: Install node modules
               run: yarn install
@@ -43,11 +43,11 @@ jobs:
 
     android-unit-tests:
         name: Run Android Unit Tests
-        runs-on: ubuntu-18.04
+        runs-on: ubuntu-latest
         needs: ['confirm-master-branch']
         steps:
             - name: Checkout
-              uses: actions/checkout@v2
+              uses: actions/checkout@v3
             
             - name: Run Android Unit Tests
               run: echo "pwd"; pwd; echo "ls:"; ls; cd android; ./gradlew test
@@ -55,14 +55,14 @@ jobs:
 
     release-and-sync-repos:
         name: Release and Sync Repos
-        runs-on: ubuntu-18.04
+        runs-on: ubuntu-latest
         needs: ['android-unit-tests', 'react-tests']
         steps:
           - name: Checkout internal/development
-            uses: actions/checkout@v2
+            uses: actions/checkout@v3
              
           - name: Setup Node.js
-            uses: actions/setup-node@v1
+            uses: actions/setup-node@v3
             with:
               node-version: 12.x
 
