--- a/android/build.gradle
+++ b/android/build.gradle
@@ -56,7 +56,8 @@ dependencies {
     //
 
     testImplementation 'org.mockito:mockito-android:2.18.3'
-    testImplementation 'com.android.support:support-annotations:27.1.1'
+    testImplementation 'androidx.annotation:annotation:1.2.0'
+
     testImplementation 'junit:junit:4.12'
     testImplementation files('libs/java-json.jar')
 
