--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,14 +1,23 @@
+buildscript {
+    repositories {
+        mavenCentral()
+        google()
+    }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:7.3.1'
+    }
+}
+
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 28
-    buildToolsVersion "28.0.3"
+    compileSdkVersion 33
 
     defaultConfig {
-        minSdkVersion 16
-        targetSdkVersion 28
-        versionCode 1
-        versionName "1.0"
+        minSdkVersion 21
+        targetSdkVersion 33
+        versionCode 2
+        versionName "2.0.0"
     }
     buildTypes {
         release {
@@ -21,24 +30,18 @@ android {
    }
 }
 
-
-buildscript {
-    repositories {
-        mavenCentral()
-        google()
-    }
-    dependencies {
-        classpath 'com.android.tools.build:gradle:3.5.1'
-    }
-}
-
 repositories {
+    maven {
+        //update periodically - current version: 0.70.5
+        url "$rootDir/react-native-android"
+    }
     mavenCentral()
     google()
+
 }
 
 dependencies {
-    compileOnly 'com.facebook.react:react-native:+'
+    compileOnly 'com.facebook.react:react-native:0.20.1'
 
     //
     // In your app, you should include mParticle core like this:
@@ -55,13 +58,13 @@ dependencies {
     //   compile 'com.mparticle:android-example-kit:REPLACEME'
     //
 
-    testImplementation 'org.mockito:mockito-android:2.18.3'
-    testImplementation 'androidx.annotation:annotation:1.2.0'
+    testImplementation 'org.mockito:mockito-core:4.9.0'
+    androidTestImplementation 'org.mockito:mockito-android:4.9.0'
+    testImplementation 'androidx.annotation:annotation:1.5.0'
 
-    testImplementation 'junit:junit:4.12'
+    testImplementation 'junit:junit:4.13.2'
     testImplementation files('libs/java-json.jar')
 
-    testImplementation 'com.mparticle:android-core:5+'
-    testImplementation 'com.facebook.react:react-native:+'
-
+    testImplementation 'com.mparticle:android-core:5.48.3'
+    testImplementation 'com.facebook.react:react-native:0.20.1'
 }
