--- a/android/build.gradle
+++ b/android/build.gradle
@@ -8,6 +8,20 @@ buildscript {
     }
 }
 
+plugins {
+    id "org.sonarqube" version "3.5.0.2730"
+    id "org.jlleitschuh.gradle.ktlint" version "11.0.0"
+}
+
+sonarqube {
+    properties {
+        property "sonar.projectKey", "react-native-mparticle"
+        property "sonar.organization", "mparticle"
+        property "sonar.host.url", "https://sonarcloud.io"
+    }
+}
+
+apply plugin: 'org.jlleitschuh.gradle.ktlint'
 apply plugin: 'com.android.library'
 
 android {
