Set up iOS and testing screen

--- a/sample/ios/Podfile
+++ b/sample/ios/Podfile
@@ -28,6 +28,9 @@ end
 target 'MParticleSample' do
   config = use_native_modules!
 
+  # https://docs.mparticle.com/developers/sdk/ios/initialization/#cocoapods
+  pod 'mParticle-Apple-SDK', '~> 8'
+
   # Flags change depending on the env values.
   flags = get_default_flags()
 
