--- a/sample/package.json
+++ b/sample/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "MParticleSample",
+  "name": "mparticle-sample",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -7,11 +7,12 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "build": "./build-scripts/override-package.sh"
   },
   "dependencies": {
     "react": "18.2.0",
-    "react-native": "0.72.6"
+    "react-native": "0.72.6",
+    "react-native-mparticle": "2.7.8"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -21,13 +22,9 @@
     "@react-native/metro-config": "^0.72.11",
     "@tsconfig/react-native": "^3.0.0",
     "@types/react": "^18.0.24",
-    "@types/react-test-renderer": "^18.0.0",
-    "babel-jest": "^29.2.1",
     "eslint": "^8.19.0",
-    "jest": "^29.2.1",
     "metro-react-native-babel-preset": "0.76.8",
     "prettier": "^2.4.1",
-    "react-test-renderer": "18.2.0",
     "typescript": "4.8.4"
   },
   "engines": {
