--- a/sample/android/settings.gradle
+++ b/sample/android/settings.gradle
@@ -1,4 +1,8 @@
 rootProject.name = 'MParticleSample'
+
+include ':react-native-mparticle'
+project(':react-native-mparticle').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-mparticle/android')
+
 apply from: file("../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesSettingsGradle(settings)
 include ':app'
 includeBuild('../node_modules/@react-native/gradle-plugin')
