--- a/android/build.gradle
+++ b/android/build.gradle
@@ -4,13 +4,13 @@ buildscript {
         google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.4.2'
+        classpath 'com.android.tools.build:gradle:8.1.4'
     }
 }
 
 plugins {
     id "org.sonarqube" version "4.4.1.3373"
-    id "org.jlleitschuh.gradle.ktlint" version "11.6.1"
+    // id "org.jlleitschuh.gradle.ktlint" version "11.6.1"
 }
 
 sonarqube {
@@ -21,10 +21,11 @@ sonarqube {
     }
 }
 
-apply plugin: 'org.jlleitschuh.gradle.ktlint'
+// apply plugin: 'org.jlleitschuh.gradle.ktlint'
 apply plugin: 'com.android.library'
 
 android {
+    namespace 'com.mparticle.react'
     compileSdkVersion 33
 
     defaultConfig {
@@ -55,7 +56,7 @@ repositories {
 }
 
 dependencies {
-    compileOnly 'com.facebook.react:react-native:0.20.1'
+    api 'com.facebook.react:react-native'
 
     //
     // In your app, you should include mParticle core like this:
@@ -64,7 +65,7 @@ dependencies {
     //
     // (See https://github.com/mparticle/mparticle-android-sdk for the latest version)
     //
-    compileOnly 'com.mparticle:android-core:[5.9.3, )'
+    api 'com.mparticle:android-core:[5.9.3, )'
 
     //
     // And, if you want to include kits, you can do so as follows:
