--- a/sample/ios/Podfile
+++ b/sample/ios/Podfile
@@ -1,7 +1,35 @@
 # Uncomment the next line to define a global platform for your project
 # platform :ios, '9.0'
+require_relative '../node_modules/react-native/scripts/react_native_pods'
+require_relative '../node_modules/@react-native-community/cli-platform-ios/native_modules'
+
+platform :ios, '12.4'
+install! 'cocoapods', :deterministic_uuids => false
 
 target 'MParticleSample' do
+  config = use_native_modules!
+
+  # Flags change depending on the env values.
+  flags = get_default_flags()
+
+  use_frameworks! :linkage => :static
+  use_modular_headers!
+
+  use_react_native!(
+    :path => config[:reactNativePath],
+    # Hermes is now enabled by default. Disable by setting this flag to false.
+    # Upcoming versions of React Native may rely on get_default_flags(), but
+    # we make it explicit here to aid in the React Native upgrade process.
+    :hermes_enabled => true,
+    :fabric_enabled => flags[:fabric_enabled],
+    # Enables Flipper.
+    #
+    # Note that if you have use_frameworks! enabled, Flipper will not work and
+    # you should disable the next line.
+    :flipper_configuration => FlipperConfiguration.disabled,
+    # An absolute path to your application root.
+    :app_path => "#{Pod::Config.instance.installation_root}/.."
+  )
   # Uncomment the next line if you're using Swift or would like to use dynamic frameworks
   # use_frameworks!
 
@@ -11,7 +39,7 @@ target 'MParticleSample' do
   #
   # pod 'mParticle-Apple-SDK', 'REPLACEME'
   #
-  # (See https://github.com/mparticle/mparticle/apple-sdk for the latest version)
+  # (See https://github.com/mparticle/mparticle-apple-sdk for the latest version)
   #
   pod 'mParticle-Apple-SDK', '~> 8'
 
@@ -22,8 +50,27 @@ target 'MParticleSample' do
   #
 
   target 'MParticleSampleTests' do
-    inherit! :search_paths
+    inherit! :complete
     # Pods for testing
+  end
+
+  post_install do |installer|
+    react_native_post_install(
+      installer,
+      config[:reactNativePath],
+      :mac_catalyst_enabled => false
+    )
+    __apply_Xcode_12_5_M1_post_install_workaround(installer)
+
+    installer.pods_project.targets.each do |target|
+      target.build_configurations.each do |config|
+        config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '12.4'
+        config.build_settings['ENABLE_BITCODE'] = 'NO'
+        config.build_settings['CLANG_ALLOW_NON_MODULAR_INCLUDES_IN_FRAMEWORK_MODULES'] = 'YES'
+        config.build_settings['CLANG_ENABLE_MODULES'] = 'YES'
+        config.build_settings['DEFINES_MODULE'] = 'YES'
+      end
+    end
   end
 
 end
