--- a/sample/android/settings.gradle
+++ b/sample/android/settings.gradle
@@ -3,4 +3,4 @@ include ':react-native-mparticle'
 project(':react-native-mparticle').projectDir = new File(rootProject.projectDir, '../../android')
 
 include ':app'
-includeBuild('../node_modules/react-native-gradle-plugin')
+includeBuild('../node_modules/@react-native/gradle-plugin')
