--- a/.npmignore
+++ b/.npmignore
@@ -1,1 +1,56 @@
-sample
+# Sample app
+sample/
+
+# Android build artifacts and libs
+android/libs/
+android/build/
+android/.gradle/
+android/local.properties
+
+# iOS build artifacts
+ios/build/
+ios/Pods/
+ios/Podfile.lock
+
+# Build directories
+build/
+dist/
+
+# Dependencies
+node_modules/
+
+# IDE files
+.idea/
+.vscode/
+*.iml
+*.iws
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# Git
+.git/
+.github/
+
+# Logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Other
+.gradle/
+.trunk/
+*.tgz
+*.tar.gz
+
+# Heavy binary files
+*.jar
+*.aar
+*.so
+*.dylib
+*.dll
+
+# Add this line to your .npmignore file
+package-lock.json
