--- a/android/build.gradle
+++ b/android/build.gradle
@@ -21,11 +21,32 @@ sonarqube {
     }
 }
 
+def supportsNamespace() {
+    def parsed = com.android.Version.ANDROID_GRADLE_PLUGIN_VERSION.tokenize('.')
+    def major = parsed[0].toInteger()
+    def minor = parsed[1].toInteger()
+
+    // Namespace support was added in 7.3.0
+    if (major == 7 && minor >= 3) {
+        return true
+    }
+
+    return major >= 8
+}
+
 // apply plugin: 'org.jlleitschuh.gradle.ktlint'
 apply plugin: 'com.android.library'
 
 android {
-    namespace 'com.mparticle.react'
+    if (supportsNamespace()) {
+        namespace 'com.mparticle.react'
+        buildFeatures.buildConfig = true
+        sourceSets {
+            main {
+                manifest.srcFile "src/main/AndroidManifestNew.xml"
+            }
+        }
+    }
     compileSdkVersion 33
 
     defaultConfig {
