--- a/sample/.gitignore
+++ b/sample/.gitignore
@@ -21,6 +21,7 @@ DerivedData
 *.ipa
 *.xcuserstate
 project.xcworkspace
+.xcode.env.local
 
 # Android/IntelliJ
 #
@@ -29,6 +30,8 @@ build/
 .gradle
 local.properties
 *.iml
+android/app/build/
+android/app/.cxx/
 
 # node.js
 #
