--- a/sample/android/settings.gradle
+++ b/sample/android/settings.gradle
@@ -1,6 +1,6 @@
+pluginManagement { includeBuild("../node_modules/@react-native/gradle-plugin") }
+plugins { id("com.facebook.react.settings") }
+extensions.configure(com.facebook.react.ReactSettingsExtension){ ex -> ex.autolinkLibrariesFromCommand() }
 rootProject.name = 'MParticleSample'
-include ':react-native-mparticle'
-project(':react-native-mparticle').projectDir = new File(rootProject.projectDir, '../../android')
-
 include ':app'
 includeBuild('../node_modules/@react-native/gradle-plugin')
