Implement Rokt integration in React Native SDK
- Added Rokt module for placement selection in both Android and iOS.
- Updated TypeScript definitions and JavaScript interface for Rokt functionality.
- Modified sample app to demonstrate Rokt placement selection.
- Updated build configurations and dependencies for compatibility with new features.

--- a/.npmignore
+++ b/.npmignore
@@ -52,5 +52,17 @@ yarn-error.log*
 *.dylib
 *.dll
 
-# Add this line to your .npmignore file
+# Development files
 package-lock.json
+yarn.lock
+tsconfig.json
+release.sh
+
+# TypeScript source files (compiled to lib/)
+js/
+
+# Development and test files
+**/*.test.ts
+**/*.test.tsx
+**/*.spec.ts
+**/*.spec.tsx
