--- a/sample/android/app/build.gradle
+++ b/sample/android/app/build.gradle
@@ -111,6 +111,7 @@ dependencies {
     // The version of react-native is set by the React Native Gradle Plugin
     implementation("com.facebook.react:react-android")
     implementation("com.mparticle:android-core:5.70.3-SNAPSHOT")
+    implementation("com.mparticle:android-rokt-kit:5.70.2")
 
     if (hermesEnabled.toBoolean()) {
         implementation("com.facebook.react:hermes-android")
