--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,10 +1,12 @@
 buildscript {
+    ext.kotlin_version = "1.8.21"
     repositories {
         mavenCentral()
         google()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:8.1.4'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
 
@@ -36,6 +38,7 @@ def supportsNamespace() {
 
 // apply plugin: 'org.jlleitschuh.gradle.ktlint'
 apply plugin: 'com.android.library'
+apply plugin: 'kotlin-android'
 
 android {
     if (supportsNamespace()) {
