--- a/sample/build
+++ b/sample/build
@@ -1,4 +1,4 @@
 cp -r ../android node_modules/react-native-mparticle
-cp -r ../js node_modules/react-native-mparticle
+cp -r ../lib node_modules/react-native-mparticle
 rm -rf node_modules/react-native-mparticle/ios
 cp -r ../ios node_modules/react-native-mparticle
