--- a/android/build.gradle
+++ b/android/build.gradle
@@ -23,6 +23,11 @@ sonarqube {
     }
 }
 
+def isNewArchitectureEnabled() {
+    // React Native 0.80+ uses this standard detection approach
+    return project.hasProperty("newArchEnabled") && project.newArchEnabled.toBoolean()
+}
+
 def supportsNamespace() {
     def parsed = com.android.Version.ANDROID_GRADLE_PLUGIN_VERSION.tokenize('.')
     def major = parsed[0].toInteger()
@@ -39,6 +44,9 @@ def supportsNamespace() {
 // apply plugin: 'org.jlleitschuh.gradle.ktlint'
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
+//if (isNewArchitectureEnabled()) {
+//    apply plugin: 'com.facebook.react'
+//}
 
 android {
     if (supportsNamespace()) {
@@ -57,6 +65,16 @@ android {
         targetSdkVersion 33
         versionCode 2
         versionName "2.0.0"
+        //buildConfigField "boolean", "IS_NEW_ARCHITECTURE_ENABLED", isNewArchitectureEnabled().toString()
+    }
+    sourceSets {
+        main {
+            //if (isNewArchitectureEnabled()) {
+            //    java.srcDirs += ['src/newarch/java']
+            //} else {
+                java.srcDirs += ['src/oldarch/java']
+            //}
+        }
     }
 
     compileOptions {
@@ -100,6 +118,7 @@ dependencies {
     //
     //   compile 'com.mparticle:android-example-kit:REPLACEME'
     //
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.6.1"
 
     testImplementation 'org.mockito:mockito-core:5.8.0'
     androidTestImplementation 'org.mockito:mockito-android:5.8.0'
