--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,9 @@
     "module": "commonjs",
     "lib": ["es2017"],
     "allowJs": true,
+    "jsx": "react-native",
     "declaration": true,
+    "sourceMap": true,
     "outDir": "./lib",
     "strict": true,
     "noImplicitAny": true,
