--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "version": "2.7.13",
   "main": "js/index.js",
   "types": "js/index.d.ts",
+  "react-native": "js/index",
   "scripts": {
     "build": "tsc",
     "clean": "rm -rf lib",
@@ -33,14 +34,11 @@
     "typescript": "5.0.4"
   },
   "codegenConfig": {
-    "name": "RoktLayoutView",
+    "name": "MParticle",
     "type": "all",
-    "jsSrcsDir": "lib/",
+    "jsSrcsDir": "js/specs",
     "android": {
-      "javaPackageName": "com.mparticle.react.rokt"
-    },
-    "ios": {
-      "swiftModuleName": "RoktLayoutView"
+      "javaPackageName": "com.mparticle.react"
     }
   }
 }
