Update iOS simulator OS version in pull request workflow to 18.4

--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -116,7 +116,7 @@ jobs:
           with:
             model: iPhone 16
             os: iOS
-            os_version: ">=18.0"
+            os_version: "18.4"
             wait_for_boot: true
             shutdown_after_job: true
 
