--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,7 +22,7 @@ jobs:
               uses: actions/checkout@v6
             - uses: actions/setup-node@v6.2.0
               with:
-                node-version: 18
+                node-version: 24
                 cache: yarn
                 cache-dependency-path: yarn.lock
 
@@ -47,6 +47,12 @@ jobs:
         name: Release and Sync Repos
         runs-on: ubuntu-latest
         needs: ['android-unit-tests', 'react-tests']
+        # OIDC permissions for npm trusted publishing
+        permissions:
+          contents: write
+          issues: write
+          pull-requests: write
+          id-token: write # Required for OIDC authentication with npm
         steps:
           - name: Checkout internal/development
             uses: actions/checkout@v6
@@ -54,13 +60,17 @@ jobs:
           - name: Setup Node.js
             uses: actions/setup-node@v6.2.0
             with:
-              node-version: 18
+              node-version: 24
+              registry-url: 'https://registry.npmjs.org'
 
           - name: Install node modules
             run: yarn install
+
+          - name: Ensure npm CLI supports OIDC
+            run: npm install -g npm@latest
 
           - name: Build SDK
             run: yarn build
 
           - name: Release
-            run: ./release.sh ${{ secrets.NPM_TOKEN}}
+            run: ./release.sh
